machine-bindings/cartesi-machine-sys/src/headers/machine-c-api.h

/// \brief Machine instance handle
/// \details cm_machine* is handle used from C api users
/// to pass the machine object when calling C api functions. Currently,
/// it is merely a pointer to internal C++ object that is  internally casted
/// back to original C++ machine type. On some obscure CPU arhitectures
/// where pointer size depend on types, this api might not work
typedef struct cm_machine_tag cm_machine; // NOLINT(modernize-use-using)
/// \brief Reads a chunk of data from the machine memory.
/// \param m Pointer to valid machine instance
/// \param address Physical address to start reading.
/// \param data Receives chunk of memory.
/// \param length Size of chunk.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
/// \details The entire chunk, from \p address to \p address + \p length must
/// be inside the same PMA region.
CM_API int cm_read_memory(const cm_machine *m, uint64_t address, unsigned char *data, uint64_t length, char **err_msg);
/// \brief Writes a chunk of data to the machine memory.
/// \param m Pointer to valid machine instance
/// \param address Physical address to start writing.
/// \param data Source for chunk of data.
/// \param length Size of chunk.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
/// \details The entire chunk, from \p address to \p address + \p length must
/// be inside the same PMA region. Moreover, this PMA must be a memory PMA,
/// and not a device PMA.
CM_API int cm_write_memory(cm_machine *m, uint64_t address, const unsigned char *data, size_t length, char **err_msg);
/// \brief Reads a chunk of data from the machine virtual memory.
/// \param m Pointer to valid machine instance
/// \param address Virtual address to start reading.
/// \param data Receives chunk of memory.
/// \param length Size of chunk.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_virtual_memory(const cm_machine *m, uint64_t address, unsigned char *data, uint64_t length,
    char **err_msg);
/// \brief Writes a chunk of data to the machine virtual memory.
/// \param m Pointer to valid machine instance
/// \param address Virtual address to start writing.
/// \param data Source for chunk of data.
/// \param length Size of chunk.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_virtual_memory(cm_machine *m, uint64_t address, const unsigned char *data, size_t length,
    char **err_msg);
/// \brief Reads the value of a general-purpose register.
/// \param m Pointer to valid machine instance
/// \param i Register index. Between 0 and X_REG_COUNT-1, inclusive.
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_x(const cm_machine *m, int i, uint64_t *val, char **err_msg);
/// \brief Writes the value of a general-purpose register.
/// \param m Pointer to valid machine instance
/// \param i Register index. Between 1 and X_REG_COUNT-1, inclusive.
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_x(cm_machine *m, int i, uint64_t val, char **err_msg);
/// \brief Gets the address of a general-purpose register.
/// \param i Register index. Between 0 and X_REG_COUNT-1, inclusive.
/// \returns Address of the specified register
CM_API uint64_t cm_get_x_address(int i);
/// \brief Gets the address of a general-purpose microarchitecture register.
/// \param i Register index. Between 0 and UARCH_X_REG_COUNT-1, inclusive.
/// \returns Address of the specified register
CM_API uint64_t cm_get_uarch_x_address(int i);
/// \brief Reads the value of a floating-point register.
/// \param m Pointer to valid machine instance
/// \param i Register index. Between 0 and F_REG_COUNT-1, inclusive.
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_f(const cm_machine *m, int i, uint64_t *val, char **err_msg);
/// \brief Writes the value of a floating-point register.
/// \param m Pointer to valid machine instance
/// \param i Register index. Between 0 and F_REG_COUNT-1, inclusive.
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_f(cm_machine *m, int i, uint64_t val, char **err_msg);
/// \brief Gets the address of a floating-point register.
/// \param i Register index. Between 0 and F_REG_COUNT-1, inclusive.
/// \returns Address of the specified register
CM_API uint64_t cm_get_f_address(int i);
/// \brief Reads the value of the pc register.
/// \param m Pointer to valid machine instance
/// \param val Receives the value of the register
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_pc(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the pc register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_pc(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the fcsr register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_fcsr(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Writes the value of the fcsr register.
/// \param m Pointer to valid machine instance
/// \param val New register value.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_write_fcsr(cm_machine *m, uint64_t val, char **err_msg);
/// \brief Reads the value of the mvendorid register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_mvendorid(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Reads the value of the marchid register.
/// \param m Pointer to valid machine instance
/// \param val Receives value of the register.
/// \param err_msg Receives the error message if function execution fails
/// or NULL in case of successful function execution. In case of failure error_msg
/// must be deleted by the function caller using cm_delete_cstring.
/// err_msg can be NULL, meaning the error message won't be received.
/// \returns 0 for success, non zero code for error
CM_API int cm_read_marchid(const cm_machine *m, uint64_t *val, char **err_msg);
/// \brief Deletes the error message
/// \param err_msg Pointer to error message received from some other function
/// \details This C API is meant to be used for various language bindings.
/// Many of them could not directly call C free function,
/// so this is a convenience function for cleanup of error messages
CM_API void cm_delete_cstring(const char *err_msg);