machine-bindings/cartesi-machine-sys/src/bindings.rs

extern "C" {
    #[doc = " \\brief Reads a chunk of data from the machine memory.\n \\param m Pointer to valid machine instance\n \\param address Physical address to start reading.\n \\param data Receives chunk of memory.\n \\param length Size of chunk.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error\n \\details The entire chunk, from \\p address to \\p address + \\p length must\n be inside the same PMA region."]
    pub fn cm_read_memory(
        m: *const cm_machine,
        address: u64,
        data: *mut ::std::os::raw::c_uchar,
        length: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes a chunk of data to the machine memory.\n \\param m Pointer to valid machine instance\n \\param address Physical address to start writing.\n \\param data Source for chunk of data.\n \\param length Size of chunk.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error\n \\details The entire chunk, from \\p address to \\p address + \\p length must\n be inside the same PMA region. Moreover, this PMA must be a memory PMA,\n and not a device PMA."]
    pub fn cm_write_memory(
        m: *mut cm_machine,
        address: u64,
        data: *const ::std::os::raw::c_uchar,
        length: usize,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads a chunk of data from the machine virtual memory.\n \\param m Pointer to valid machine instance\n \\param address Virtual address to start reading.\n \\param data Receives chunk of memory.\n \\param length Size of chunk.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_virtual_memory(
        m: *const cm_machine,
        address: u64,
        data: *mut ::std::os::raw::c_uchar,
        length: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes a chunk of data to the machine virtual memory.\n \\param m Pointer to valid machine instance\n \\param address Virtual address to start writing.\n \\param data Source for chunk of data.\n \\param length Size of chunk.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_virtual_memory(
        m: *mut cm_machine,
        address: u64,
        data: *const ::std::os::raw::c_uchar,
        length: usize,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of a general-purpose register.\n \\param m Pointer to valid machine instance\n \\param i Register index. Between 0 and X_REG_COUNT-1, inclusive.\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_x(
        m: *const cm_machine,
        i: ::std::os::raw::c_int,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of a general-purpose register.\n \\param m Pointer to valid machine instance\n \\param i Register index. Between 1 and X_REG_COUNT-1, inclusive.\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_x(
        m: *mut cm_machine,
        i: ::std::os::raw::c_int,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Gets the address of a general-purpose register.\n \\param i Register index. Between 0 and X_REG_COUNT-1, inclusive.\n \\returns Address of the specified register"]
    pub fn cm_get_x_address(i: ::std::os::raw::c_int) -> u64;
}
extern "C" {
    #[doc = " \\brief Gets the address of a general-purpose microarchitecture register.\n \\param i Register index. Between 0 and UARCH_X_REG_COUNT-1, inclusive.\n \\returns Address of the specified register"]
    pub fn cm_get_uarch_x_address(i: ::std::os::raw::c_int) -> u64;
}
extern "C" {
    #[doc = " \\brief Reads the value of a floating-point register.\n \\param m Pointer to valid machine instance\n \\param i Register index. Between 0 and F_REG_COUNT-1, inclusive.\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_f(
        m: *const cm_machine,
        i: ::std::os::raw::c_int,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of a floating-point register.\n \\param m Pointer to valid machine instance\n \\param i Register index. Between 0 and F_REG_COUNT-1, inclusive.\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_f(
        m: *mut cm_machine,
        i: ::std::os::raw::c_int,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Gets the address of a floating-point register.\n \\param i Register index. Between 0 and F_REG_COUNT-1, inclusive.\n \\returns Address of the specified register"]
    pub fn cm_get_f_address(i: ::std::os::raw::c_int) -> u64;
}
extern "C" {
    #[doc = " \\brief Reads the value of the pc register.\n \\param m Pointer to valid machine instance\n \\param val Receives the value of the register\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_pc(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the pc register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_pc(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the fcsr register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_fcsr(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Writes the value of the fcsr register.\n \\param m Pointer to valid machine instance\n \\param val New register value.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_write_fcsr(
        m: *mut cm_machine,
        val: u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the mvendorid register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_mvendorid(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " \\brief Reads the value of the marchid register.\n \\param m Pointer to valid machine instance\n \\param val Receives value of the register.\n \\param err_msg Receives the error message if function execution fails\n or NULL in case of successful function execution. In case of failure error_msg\n must be deleted by the function caller using cm_delete_cstring.\n err_msg can be NULL, meaning the error message won't be received.\n \\returns 0 for success, non zero code for error"]
    pub fn cm_read_marchid(
        m: *const cm_machine,
        val: *mut u64,
        err_msg: *mut *mut ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
